Fix | Overlap from infoBlock container about us on laptop small

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -129,6 +129,9 @@
     @include tablet {
         margin-bottom: 78px !important;
     }
+    @include laptop-lg {
+        margin-bottom: 99px !important;
+    }
 }
 
 .infoBlock-paragraphs_aboutUs {
